syntax = "proto3";

import "PB_PidEnum.proto";

message PB_Pid {
    PB_PidEnum id = 1;
    double kp = 2;
    double ki = 3;
    double kd = 4;
    double previous_error = 5;
    double integral_term = 6;
    double integral_term_limit = 7;
}

message PB_Pids {
    repeated PB_Pid pids = 1;
}
