var searchData=
[
  ['path_20module_324',['Path module',['../group__lib__path.html',1,'']]],
  ['parent_325',['parent',['../classcogip_1_1shell_1_1Menu.html#a76cb41413135fa4e947ef3efd85847b9',1,'cogip::shell::Menu']]],
  ['path_326',['Path',['../classcogip_1_1path_1_1Path.html',1,'cogip::path::Path'],['../classcogip_1_1path_1_1Path.html#a1709090538f608b00476784b35fbcf14',1,'cogip::path::Path::Path()']]],
  ['path_2ehpp_327',['Path.hpp',['../Path_8hpp.html',1,'']]],
  ['path_5f_328',['path_',['../classcogip_1_1planners_1_1Planner.html#a1f7807b1e0537081827ca0f6d4110890',1,'cogip::planners::Planner']]],
  ['pb_5fcopy_329',['pb_copy',['../classcogip_1_1cogip__defs_1_1Coords.html#a040678f2732932910c2ffa15d9d77642',1,'cogip::cogip_defs::Coords::pb_copy()'],['../classcogip_1_1cogip__defs_1_1Polar.html#a1ea72ce091dca581c827ffe1a8d73fe4',1,'cogip::cogip_defs::Polar::pb_copy()'],['../classcogip_1_1cogip__defs_1_1Pose.html#a18dfaf3d46a05dd6e60e524ef5ac6ba4',1,'cogip::cogip_defs::Pose::pb_copy()'],['../classcogip_1_1path_1_1Pose.html#ac83620ac8faf9f9c74ba3cdcfb4e61eb',1,'cogip::path::Pose::pb_copy()']]],
  ['pb_5fmessage_330',['pb_message',['../classcogip_1_1shell_1_1Command.html#aaf020fc65ae0d3a56e18ee06249f7502',1,'cogip::shell::Command::pb_message()'],['../classcogip_1_1sysmon_1_1MemoryStatus.html#a9cab4980d1944d8556cda72e1e270d6d',1,'cogip::sysmon::MemoryStatus::pb_message()'],['../classcogip_1_1sysmon_1_1ThreadStatus.html#a8f4ca3b53648ae5e97b600db518bfa43',1,'cogip::sysmon::ThreadStatus::pb_message()'],['../classcogip_1_1wizard_1_1Wizard.html#a8704bf110f276b293ea96d38ccf0f908',1,'cogip::wizard::Wizard::PB_Message()'],['../classcogip_1_1shell_1_1Command.html#ad930f371d92e8924714fe297c6579bac',1,'cogip::shell::Command::PB_Message()']]],
  ['pb_5fread_331',['pb_read',['../classcogip_1_1path_1_1Pose.html#abcf9fbf7b6c2c7c8a4a0902ba4336066',1,'cogip::path::Pose']]],
  ['pca9548_2eh_332',['pca9548.h',['../pca9548_8h.html',1,'']]],
  ['pca9548_5fchannel_5fmax_333',['PCA9548_CHANNEL_MAX',['../group__I2C.html#gad5d681275fa6fb45b0eb7f6c7a42617d',1,'pca9548.h']]],
  ['pca9548_5fconf_5ft_334',['pca9548_conf_t',['../structpca9548__conf__t.html',1,'']]],
  ['pca9548_5fdefault_5fchannel_335',['PCA9548_DEFAULT_CHANNEL',['../group__I2C.html#gab8eac3370baa117774350689505b6af3',1,'pca9548.h']]],
  ['pca9548_5fget_5fcurrent_5fchannel_336',['pca9548_get_current_channel',['../group__I2C.html#ga49f2fe1aef888e9a1ab6000ee9ada9bf',1,'pca9548.h']]],
  ['pca9548_5finit_337',['pca9548_init',['../group__I2C.html#ga217ff4c08ca6699cbdd8dc68bf681475',1,'pca9548.h']]],
  ['pca9548_5fset_5fcurrent_5fchannel_338',['pca9548_set_current_channel',['../group__I2C.html#ga16ae4dcb50c28cd9ab0715bca5416802',1,'pca9548.h']]],
  ['pca9548_5ft_339',['pca9548_t',['../group__I2C.html#ga803140f0a98acbf6f59ca880fb99f9d1',1,'pca9548.h']]],
  ['pf_5fconf_340',['pf_conf',['../structctrl__t.html#a4ac7390429f5c64272d5ea4c920834a1',1,'ctrl_t::pf_conf()'],['../structctrl__quadpid__t.html#a563fe862af62a2384cae79ccc2e548bc',1,'ctrl_quadpid_t::pf_conf()']]],
  ['pf_5fctrl_5fblocking_5fnb_5fiterations_341',['PF_CTRL_BLOCKING_NB_ITERATIONS',['../group__platforms__pegasus.html#ga01bacd6f9470eed0d74a58285526fe7a',1,'PF_CTRL_BLOCKING_NB_ITERATIONS():&#160;platform.hpp'],['../group__platforms__pf__test.html#ga01bacd6f9470eed0d74a58285526fe7a',1,'PF_CTRL_BLOCKING_NB_ITERATIONS():&#160;platform.hpp']]],
  ['pf_5fctrl_5fblocking_5fspeed_5ferr_5ftreshold_342',['PF_CTRL_BLOCKING_SPEED_ERR_TRESHOLD',['../group__platforms__pegasus.html#ga3984f9c2d95afbec45567dd92dcde0a7',1,'PF_CTRL_BLOCKING_SPEED_ERR_TRESHOLD():&#160;platform.hpp'],['../group__platforms__pf__test.html#ga3984f9c2d95afbec45567dd92dcde0a7',1,'PF_CTRL_BLOCKING_SPEED_ERR_TRESHOLD():&#160;platform.hpp']]],
  ['pf_5fctrl_5fblocking_5fspeed_5ftreshold_343',['PF_CTRL_BLOCKING_SPEED_TRESHOLD',['../group__platforms__pegasus.html#ga90289a6f37fb07848596fac167c12f20',1,'PF_CTRL_BLOCKING_SPEED_TRESHOLD():&#160;platform.hpp'],['../group__platforms__pf__test.html#ga90289a6f37fb07848596fac167c12f20',1,'PF_CTRL_BLOCKING_SPEED_TRESHOLD():&#160;platform.hpp']]],
  ['pf_5fctrl_5fpost_5frunning_5fcb_344',['pf_ctrl_post_running_cb',['../group__platforms__pegasus.html#ga1e413308e51c5909c893387f35b2547e',1,'pf_ctrl_post_running_cb(cogip::cogip_defs::Pose &amp;robot_pose, cogip::cogip_defs::Polar &amp;robot_speed, cogip::cogip_defs::Polar &amp;motor_command):&#160;platform.hpp'],['../group__platforms__pf__test.html#ga1e413308e51c5909c893387f35b2547e',1,'pf_ctrl_post_running_cb(cogip::cogip_defs::Pose &amp;robot_pose, cogip::cogip_defs::Polar &amp;robot_speed, cogip::cogip_defs::Polar &amp;motor_command):&#160;platform.hpp']]],
  ['pf_5fctrl_5fpost_5fstop_5fcb_345',['pf_ctrl_post_stop_cb',['../group__platforms__pegasus.html#ga2b7ce11a87f88a40ae10837767c85b01',1,'pf_ctrl_post_stop_cb(cogip::cogip_defs::Pose &amp;robot_pose, cogip::cogip_defs::Polar &amp;robot_speed, cogip::cogip_defs::Polar &amp;motor_command):&#160;platform.hpp'],['../group__platforms__pf__test.html#ga2b7ce11a87f88a40ae10837767c85b01',1,'pf_ctrl_post_stop_cb(cogip::cogip_defs::Pose &amp;robot_pose, cogip::cogip_defs::Polar &amp;robot_speed, cogip::cogip_defs::Polar &amp;motor_command):&#160;platform.hpp']]],
  ['pf_5fctrl_5fpre_5frunning_5fcb_346',['pf_ctrl_pre_running_cb',['../group__platforms__pegasus.html#gadf1ea194fa6cf1a4fd7c499bc1518e7b',1,'pf_ctrl_pre_running_cb(cogip::cogip_defs::Pose &amp;robot_pose, cogip::cogip_defs::Polar &amp;robot_speed, cogip::cogip_defs::Polar &amp;motor_command):&#160;platform.hpp'],['../group__platforms__pf__test.html#gadf1ea194fa6cf1a4fd7c499bc1518e7b',1,'pf_ctrl_pre_running_cb(cogip::cogip_defs::Pose &amp;robot_pose, cogip::cogip_defs::Polar &amp;robot_speed, cogip::cogip_defs::Polar &amp;motor_command):&#160;platform.hpp']]],
  ['pf_5fget_5fctrl_347',['pf_get_ctrl',['../group__platforms__pegasus.html#gada66418f7a25f83900babc9406aeb623',1,'pf_get_ctrl(void):&#160;platform.hpp'],['../group__platforms__pf__test.html#gada66418f7a25f83900babc9406aeb623',1,'pf_get_ctrl(void):&#160;platform.hpp']]],
  ['pf_5fget_5fquadpid_5fctrl_348',['pf_get_quadpid_ctrl',['../group__platforms__pegasus.html#ga76464c76865b8a010f137488bf519fe3',1,'pf_get_quadpid_ctrl(void):&#160;platform.hpp'],['../group__platforms__pf__test.html#ga76464c76865b8a010f137488bf519fe3',1,'pf_get_quadpid_ctrl(void):&#160;platform.hpp']]],
  ['pf_5fget_5fuartpb_349',['pf_get_uartpb',['../group__platforms__pegasus.html#ga47177f8977d43047562b0cb1c6a4aa46',1,'pf_get_uartpb():&#160;platform.hpp'],['../group__platforms__pf__test.html#ga47177f8977d43047562b0cb1c6a4aa46',1,'pf_get_uartpb():&#160;platform.hpp']]],
  ['pf_5finit_350',['pf_init',['../group__platforms__pegasus.html#gad2d77ae9a60de6fba2ff595654fb94e0',1,'pf_init(void):&#160;platform.hpp'],['../group__platforms__pf__test.html#gad2d77ae9a60de6fba2ff595654fb94e0',1,'pf_init(void):&#160;platform.hpp']]],
  ['pf_5finit_5fquadpid_5fparams_351',['pf_init_quadpid_params',['../group__platforms__pegasus.html#ga096df40041a3b5fba1c96cd90524be73',1,'pf_init_quadpid_params(ctrl_quadpid_parameters_t ctrl_quadpid_params):&#160;platform.hpp'],['../group__platforms__pf__test.html#ga096df40041a3b5fba1c96cd90524be73',1,'pf_init_quadpid_params(ctrl_quadpid_parameters_t ctrl_quadpid_params):&#160;platform.hpp']]],
  ['pf_5finit_5ftasks_352',['pf_init_tasks',['../group__platforms__pegasus.html#gac3bbbd7ff3d70fb15bbd73b9203044f3',1,'pf_init_tasks(void):&#160;platform.hpp'],['../group__platforms__pf__test.html#gac3bbbd7ff3d70fb15bbd73b9203044f3',1,'pf_init_tasks(void):&#160;platform.hpp']]],
  ['pf_5fis_5fgame_5flaunched_353',['pf_is_game_launched',['../group__platforms__pegasus.html#gae1a6aab08a0179e854ade7561e3dc079',1,'pf_is_game_launched(void):&#160;platform.hpp'],['../group__platforms__pf__test.html#gae1a6aab08a0179e854ade7561e3dc079',1,'pf_is_game_launched(void):&#160;platform.hpp']]],
  ['pf_5fprint_5fstate_354',['pf_print_state',['../group__platforms__pegasus.html#gaaed945ac04303eef4f08d257f0a3c944',1,'pf_print_state(void):&#160;platform.hpp'],['../group__platforms__pf__test.html#gaaed945ac04303eef4f08d257f0a3c944',1,'pf_print_state(void):&#160;platform.hpp']]],
  ['pf_5fsend_5fpb_5fpose_355',['pf_send_pb_pose',['../group__platforms__pegasus.html#gac98f9f54dcfddb87cd08b39cc52a9f9a',1,'pf_send_pb_pose(void):&#160;platform.hpp'],['../group__platforms__pf__test.html#gac98f9f54dcfddb87cd08b39cc52a9f9a',1,'pf_send_pb_pose(void):&#160;platform.hpp']]],
  ['pf_5fsend_5fpb_5fstate_356',['pf_send_pb_state',['../group__platforms__pegasus.html#ga0fc74267bdda152e7626e2c284689d07',1,'pf_send_pb_state(void):&#160;platform.hpp'],['../group__platforms__pf__test.html#ga0fc74267bdda152e7626e2c284689d07',1,'pf_send_pb_state(void):&#160;platform.hpp']]],
  ['pf_5fset_5fcopilot_5fconnected_357',['pf_set_copilot_connected',['../group__platforms__pegasus.html#gaf83cc53998c27d898d71f8a7e981fdc0',1,'pf_set_copilot_connected(bool connected):&#160;platform.hpp'],['../group__platforms__pf__test.html#gaf83cc53998c27d898d71f8a7e981fdc0',1,'pf_set_copilot_connected(bool connected):&#160;platform.hpp']]],
  ['pf_5ftrace_5fon_358',['pf_trace_on',['../group__platforms__pegasus.html#ga1dc63a69bc06342aca5ca9cb42e784fa',1,'pf_trace_on(void):&#160;platform.hpp'],['../group__platforms__pf__test.html#ga1dc63a69bc06342aca5ca9cb42e784fa',1,'pf_trace_on(void):&#160;platform.hpp']]],
  ['pid_359',['PID',['../structPID.html',1,'PID'],['../classcogip_1_1sysmon_1_1ThreadStatus.html#a8a74537e466c50c95037abb5ce173c9d',1,'cogip::sysmon::ThreadStatus::pid()']]],
  ['pid_5ft_360',['PID_t',['../structPID__t.html',1,'']]],
  ['planner_361',['Planner',['../classcogip_1_1planners_1_1Planner.html',1,'cogip::planners::Planner'],['../classcogip_1_1planners_1_1Planner.html#a99a2bbbbd348c29ecd80d4a369293409',1,'cogip::planners::Planner::Planner()']]],
  ['planner_2ehpp_362',['Planner.hpp',['../Planner_8hpp.html',1,'']]],
  ['platform_2ehpp_363',['platform.hpp',['../pegasus_2include_2platform_8hpp.html',1,'(Global Namespace)'],['../pf__test_2include_2platform_8hpp.html',1,'(Global Namespace)']]],
  ['play_5fin_5floop_5f_364',['play_in_loop_',['../classcogip_1_1path_1_1Path.html#acaa7fce36fa228316d17e5baa1247ba0',1,'cogip::path::Path']]],
  ['point_5findex_365',['point_index',['../classcogip_1_1cogip__defs_1_1Polygon.html#a0dc45ee4ad175fdadb6ee15608e71e44',1,'cogip::cogip_defs::Polygon']]],
  ['polar_366',['Polar',['../classcogip_1_1cogip__defs_1_1Polar.html',1,'cogip::cogip_defs::Polar'],['../classcogip_1_1cogip__defs_1_1Polar.html#a437c0afff180bc591d2a8f9ac5f75e4b',1,'cogip::cogip_defs::Polar::Polar(double distance=0.0, double angle=0.0)'],['../classcogip_1_1cogip__defs_1_1Polar.html#aa100222b95afb121b97e7e60b1f36d3b',1,'cogip::cogip_defs::Polar::Polar(const PB_Polar &amp;polar)']]],
  ['polar_2ehpp_367',['Polar.hpp',['../Polar_8hpp.html',1,'']]],
  ['polygon_368',['Polygon',['../classcogip_1_1cogip__defs_1_1Polygon.html',1,'cogip::cogip_defs::Polygon&lt; N &gt;'],['../classcogip_1_1obstacles_1_1Polygon.html',1,'cogip::obstacles::Polygon'],['../classcogip_1_1obstacles_1_1Polygon.html#a658dfc57f37cec27d487cd8017dd8477',1,'cogip::obstacles::Polygon::Polygon()'],['../classcogip_1_1obstacles_1_1Polygon.html#ac3edfb85f11a7326904b4295778698f8',1,'cogip::obstacles::Polygon::Polygon(const etl::ivector&lt; cogip_defs::Coords &gt; &amp;points)']]],
  ['polygon_2ehpp_369',['Polygon.hpp',['../cogip__defs_2include_2cogip__defs_2Polygon_8hpp.html',1,'(Global Namespace)'],['../obstacles_2include_2obstacles_2Polygon_8hpp.html',1,'(Global Namespace)']]],
  ['polygon_3c_20obstacle_5fbounding_5fbox_5fvertices_20_3e_370',['Polygon&lt; OBSTACLE_BOUNDING_BOX_VERTICES &gt;',['../classcogip_1_1cogip__defs_1_1Polygon.html',1,'cogip::cogip_defs']]],
  ['polygon_3c_20obstacle_5fmax_5fpoints_5fin_5fpolygon_20_3e_371',['Polygon&lt; OBSTACLE_MAX_POINTS_IN_POLYGON &gt;',['../classcogip_1_1cogip__defs_1_1Polygon.html',1,'cogip::cogip_defs']]],
  ['pose_372',['Pose',['../classcogip_1_1cogip__defs_1_1Pose.html',1,'cogip::cogip_defs::Pose'],['../classcogip_1_1path_1_1Pose.html',1,'cogip::path::Pose'],['../classcogip_1_1cogip__defs_1_1Pose.html#a7f53b8e6949418932d26f3f05ecbf8ea',1,'cogip::cogip_defs::Pose::Pose(double x=0.0, double y=0.0, double O=0.0)'],['../classcogip_1_1cogip__defs_1_1Pose.html#a1d6a48642b97e5b4cfd61f6e2976d538',1,'cogip::cogip_defs::Pose::Pose(const PB_Pose &amp;pose)'],['../classcogip_1_1path_1_1Pose.html#ac787b8623a57afe29e69891d8c834113',1,'cogip::path::Pose::Pose()']]],
  ['pose_2ehpp_373',['Pose.hpp',['../cogip__defs_2include_2cogip__defs_2Pose_8hpp.html',1,'(Global Namespace)'],['../path_2include_2path_2Pose_8hpp.html',1,'(Global Namespace)']]],
  ['pose_5fcurrent_374',['pose_current',['../structctrl__control__t.html#ae80be0a05c6b425a4d5a8149c58d4ade',1,'ctrl_control_t']]],
  ['pose_5fintermediate_375',['pose_intermediate',['../structctrl__control__t.html#ac9bbed1d7171c554dc6c0a6b09f65665',1,'ctrl_control_t']]],
  ['pose_5forder_376',['pose_order',['../structctrl__control__t.html#ac420b2c3797f3db0c289ca60a4cb60cd',1,'ctrl_control_t']]],
  ['pose_5freached_377',['pose_reached',['../structctrl__control__t.html#ac9e2af34b01e129822a85042c1e0a64c',1,'ctrl_control_t']]],
  ['positions_378',['positions',['../structsd21__servo__t.html#a76ee30b4bd48170b9e9c942a0d60179f',1,'sd21_servo_t']]],
  ['previous_5ferror_379',['previous_error',['../structPID__t.html#a0c1f4925a109ad0d4cc961053c7368a1',1,'PID_t']]],
  ['pulse_5fper_5fdegree_380',['PULSE_PER_DEGREE',['../group__platforms__pegasus.html#gacbb08326267508e235c00d143e155eca',1,'PULSE_PER_DEGREE():&#160;platform.hpp'],['../group__platforms__pf__test.html#gacbb08326267508e235c00d143e155eca',1,'PULSE_PER_DEGREE():&#160;platform.hpp']]],
  ['pulse_5fper_5fmm_381',['PULSE_PER_MM',['../group__platforms__pegasus.html#ga08c0f465176ed8ed950f1fcba75fcdfe',1,'PULSE_PER_MM():&#160;platform.hpp'],['../group__platforms__pf__test.html#ga08c0f465176ed8ed950f1fcba75fcdfe',1,'PULSE_PER_MM():&#160;platform.hpp']]],
  ['push_382',['push',['../classcogip_1_1uartpb_1_1ReadBuffer.html#abe513039fa34140f98cd99c947cb411c',1,'cogip::uartpb::ReadBuffer']]]
];
